test/fixtures/public/fail/semantic/arr_size_not_int.jmm
/*  REASON:
    Array sizes must be integer.
*/

class T {
    public static void main(String[] a) { 
        int[] x;
        x = new int[true];
    }
}
